<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView android:visibility="gone"
        android:id="@+id/txt_calfare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/swipe_refresh"
        android:layout_marginLeft="@dimen/margin_5"
        android:background="#2a2a2a"
        android:padding="@dimen/margin_3"
        android:text="Calculating Fare.........."
        android:textColor="@color/white" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_width">

    </com.google.android.gms.maps.MapView>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mapview"
        android:layout_marginTop="10dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scrollbarThumbVertical="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:text="@string/taxigo"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <View
                    android:id="@+id/liner"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/title"
                    android:background="@color/liner" />

                <LinearLayout
                    android:id="@+id/linear_child1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/liner"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/namee"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/txt_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mobile_numberr"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/txt_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text="+000000000000"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pickup_location"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/txt_pickup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="2"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/drop_location"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/txt_drop"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="2"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vehicle_name"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/txt_vehiclename"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fare"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/txt_fare"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                        </TableRow>

                    </TableLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/title"
                        android:background="@color/liner" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_child1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_cancel"
                        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"

                        android:layout_weight="1"
                        android:background="@drawable/ripple_effect"
                        android:text="@string/cancel" />


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_confirm"
                        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_effect"
                        android:text="@string/confirm" />
                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>