<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_220"
    android:background="@drawable/header_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/yellow">

            <EditText
                android:id="@+id/input_Password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourty_five"
                android:layout_margin="@dimen/five"
                android:background="@drawable/rounded_view"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/hint"
                android:textColorHint="@color/hint"
                android:textCursorDrawable="@drawable/cursor"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/yellow" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/yellow">

            <EditText
                android:id="@+id/input_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourty_five"
                android:layout_margin="@dimen/five"
                android:background="@drawable/rounded_view"
                android:hint="@string/new_pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/hint"
                android:textColorHint="@color/hint"
                android:textCursorDrawable="@drawable/cursor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ronded_button1"
            android:text="@string/change_password"
            android:textColor="@color/text_color" />
    </LinearLayout>

</LinearLayout>